--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
-  "buildCommand": "turbo run build --filter=web",
+  "buildCommand": "npm run web:build",
   "regions": ["iad1"],
   "crons": [
     {
