chore: Update environment configuration and enhance Strapi publishing logic
- Changed NODE_ENV to production and updated NEXT_PUBLIC_SITE_URL in .env.example.
- Improved article publishing logic in publishToStrapi function, including character limits for title and description, and structured content into blocks for Strapi.
- Updated robots.txt to reflect the new sitemap URL.
- Enhanced setup-telegram-webhook.js to handle optional dotenv loading and improved logging messages.

--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,5 @@ GA_MEASUREMENT_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
 # ----- Site URLs -----
-NODE_ENV=development
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NODE_ENV=production
+NEXT_PUBLIC_SITE_URL=https://blog.optaimum.com
