--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,7 @@ NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 # ----- Site URLs -----
 NODE_ENV=production
 NEXT_PUBLIC_SITE_URL=https://blog.optaimum.com
+
+# ----- Cron & Revalidation (required for scheduled posts) -----
+CRON_SECRET=your_random_cron_secret
+REVALIDATION_SECRET=your_random_revalidation_secret
