chore: Update site URL references and enhance article publishing logic
- Changed NEXT_PUBLIC_SITE_URL in .env.example and robots.txt to reflect the new blog URL.
- Updated the content pipeline to include a query parameter for published status during article creation.
- Refactored revalidation function to accept a slug for dynamic path revalidation after publishing articles.
- Enhanced the article controller to automatically publish articles upon creation if the status is set to 'published'.

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
 # ----- Site URLs -----
 NODE_ENV=production
-NEXT_PUBLIC_SITE_URL=https://blog.optaimum.com
+NEXT_PUBLIC_SITE_URL=https://blogs.optaimum.com
 
 # ----- Cron & Revalidation (required for scheduled posts) -----
 CRON_SECRET=your_random_cron_secret
